[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idn-quake-info"
version = "0.1.1"
authors = [
  { name="Risky Mulya Nugraha", email="riskymulya@protonmail.com" },
]
description = "This package extracts the latest earthquake information from the official website of the Indonesian Meteorology, Climatology, and Geophysics Agency (BMKG)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rizmulya/idn-quake-info.git"
"Bug Tracker" = "https://github.com/rizmulya/idn-quake-info"